
- Added support for zero-copy on x86_64 processors when using the
  sequence C++ array mapping.


Java Changes
============

- Added support for the Ice.UseApplicationClassLoader configuration
  property. When set to 1, the Ice core will set the thread context
  class loader to the class loader of the servant or AMI callback
  before dispatching the call.


Python Changes
==============

- Added "self" to the Slice compiler's list of Python keywords.


PHP Changes
===========

- SLES 11 RPMs now require PHP 5.3.


======================================================================
Changes since version 3.4.2
======================================================================


General Changes
===============

- The Ice::ConnectionInfo class supports an additional connectionId
  field. This ID matches the connection ID set on a proxy with the
  ice_connectionId proxy method.

- The Ice::UDPEndpointInfo class no longer supports encoding and
  protocol version members. These members have been deprecated with
  the 1.1 encoding.

- Added support for TLS 1.1 and TLS 1.2 in IceSSL for C++ and Java.

- IceGrid now supports a new proxy-options attribute on the <adapter>
  <replica-group>, <object> and <allocatable> XML descriptor
  elements. This attribute allows to specify the proxy options to use
  for well-known objects or allocatable objects. For adapters, it also
  generates the object adapter ProxyOptions property in the server or
  service configuration file. This change requires a IceGrid database
  upgrade.

- Improved Glacier2 permission verifiers to permit throwing
  Glacier2::PermissionDeniedException exceptions. Glacier2 now
  forwards permission denied exceptions to the client.

- The Slice compilers now define the ICE_VERSION preprocessor macro
  so that you can use the Ice version to conditionally compile your
  Slice definitions.

- Fixed bug where the UDP client endpoint --interface option would be
  ignored on some platforms (Windows and OS X).
